tests/testcases/errors/BCE0022-13.boo
"""
BCE0022-13.boo(5,5): BCE0022: Cannot convert 'string' to 'int'.
"""
i = "sok"
for i in range(10):
	print i

